# dayops

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SESSION_HISTORY.md  akash-deploy.yaml  backend.py  com.kian.dayops.plist  com.kian.transcribe.plist  coo.py  dayops_core.py  deploy.yaml  main.py  plan.md  pyproject.toml  run_dayops.sh  run_transcribe.sh  skills-lock.json  transcribe.py  users.example.json
akash/: deploy.yaml
oauth_shim/: Dockerfile  main.py  requirements.txt
scripts/: install_launchd.sh
