[project]
name = "dayops"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "openai>=1.108.1",
    "requests>=2.32.5",
    "send2trash>=2.1.0",
    "typer>=0.19.2",
]

[project.scripts]
dayops = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "dayops_core.py"]
