[project]
name = "dayops"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "itsdangerous>=2.2.0",
    "openai>=1.108.1",
    "pydantic>=2.11.10",
    "python-multipart>=0.0.20",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]

[project.scripts]
dayops = "main:app"
dayops-api = "backend:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "dayops_core.py", "backend.py"]
